--- a/worlds/gen.world.jinja
+++ b/worlds/gen.world.jinja
@@ -117,20 +117,20 @@ Generated with jinja_world_gen.py
       <uri>model://ground_plane</uri>
     </include>
   {%- endif %}
-  {%- if world_name == 'nxp_raceway_overpass' %}
+  {%- if world_name == 'robocon_raceway_overpass' %}
     <include>
       <uri>model://ground_plane</uri>
     </include>
     <include>
-      <uri>model://nxp_raceway_overpass</uri>
+      <uri>model://robocon_raceway_overpass</uri>
     </include>
   {%- endif %}
-  {%- if world_name == 'nxp_raceway_octagon' %}
+  {%- if world_name == 'robocon_raceway_octagon' %}
     <include>
       <uri>model://ground_plane</uri>
     </include>
     <include>
-      <uri>model://nxp_raceway_octagon</uri>
+      <uri>model://robocon_raceway_octagon</uri>
     </include>
   {%- endif %}
   {%- if world_name == 'baylands' %}
