--- a/scripts/model.config.jinja
+++ b/scripts/model.config.jinja
@@ -6,11 +6,11 @@
   <sdf version='{{ sdf_version }}'>{{ model_name }}.sdf</sdf>
 
   <author>
-   <name>Benjamin Perseghetti</name>
-   <email>bperseghetti@rudislabs.com</email>
+   <name>hewhoshallnotbenamed</name>
+    <email>hewsnbn@gmail.com</email>
   </author>
 
   <description>
-    Generated model file.
+    Generated model file. (Original author Benjamin Perseghetti bperseghetti@rudislabs.com)
   </description>
 </model>
