--- a/models/robo_car/exp_scale_robo_car.sdf.jinja
+++ b/models/robo_car/exp_scale_robo_car.sdf.jinja
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-{%- set model_name = "robocon_car" if model_name == "NotSet" else model_name -%}
+{%- set model_name = "robo_car" if model_name == "NotSet" else model_name -%}
 {%- set sdf_version = "1.5" if sdf_version == "NotSet" else sdf_version -%}
 {%- set hq_frame = 0 if hq_frame == "NotSet" else hq_frame -%}
 {%- set hq_wheel = 0 if hq_wheel == "NotSet" else hq_wheel -%}
@@ -31,7 +31,7 @@
         <pose>{{ -0.145*scale }} 0 {{ 0.146*scale }} 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarCarbonFiber.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarCarbonFiber.stl</uri>
             <scale>{{ 0.001*scale }} {{ 0.001*scale }} {{ 0.001*scale }}</scale>
           </mesh>
         </geometry>
@@ -46,7 +46,7 @@
         <pose>{{ -0.145*scale }} 0 {{ 0.146*scale }} 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarMetalPartsNoSteerNoScrews.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarMetalPartsNoSteerNoScrews.stl</uri>
             <scale>{{ 0.001*scale }} {{ 0.001*scale }} {{ 0.001*scale }}</scale>
           </mesh>
         </geometry>
@@ -61,7 +61,7 @@
         <pose>{{ -0.145*scale }} 0 {{ 0.146*scale }} 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarServoBumper.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarServoBumper.stl</uri>
             <scale>{{ 0.001*scale }} {{ 0.001*scale }} {{ 0.001*scale }}</scale>
           </mesh>
         </geometry>
@@ -78,7 +78,7 @@
         <pose>0 0 0 0 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarCollisionBody.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarCollisionBody.stl</uri>
             <scale>{{ 1.0*scale }} {{ 1.0*scale }} {{ 1.0*scale }}</scale>
           </mesh>
         </geometry>
@@ -161,7 +161,7 @@
         <pose>0 {{ 0.006*scale }} 0 0 0 -1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/LeftWheel.stl</uri>
+            <uri>model://robo_car/meshes/LeftWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -238,7 +238,7 @@
         <pose>0 {{ -0.006*scale }} 0 0 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/RightWheel.stl</uri>
+            <uri>model://robo_car/meshes/RightWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -315,7 +315,7 @@
         <pose>0 {{ 0.006*scale }} 0 0 0 -1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/LeftWheel.stl</uri>
+            <uri>model://robo_car/meshes/LeftWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -391,7 +391,7 @@
         <pose>0 {{ -0.006*scale }} 0 0 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/RightWheel.stl</uri>
+            <uri>model://robo_car/meshes/RightWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
