--- a/models/robo_car/robo_car.sdf.jinja
+++ b/models/robo_car/robo_car.sdf.jinja
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-{%- set model_name = "robocon_car" if model_name == "NotSet" else model_name -%}
+{%- set model_name = "robo_car" if model_name == "NotSet" else model_name -%}
 {%- set sdf_version = "1.5" if sdf_version == "NotSet" else sdf_version -%}
 {%- set camera_image = "Pixy2CMUcam5" if camera_image == "NotSet" else camera_image -%}
 {%- set namespace = "" if namespace == "NotSet" else namespace -%}
@@ -27,7 +27,7 @@
         <pose>-0.145 0 .146 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarCarbonFiber.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarCarbonFiber.stl</uri>
             <scale>0.001 0.001 0.001</scale>
           </mesh>
         </geometry>
@@ -42,7 +42,7 @@
         <pose>-0.145 0 .146 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarMetalPartsNoSteerNoScrews.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarMetalPartsNoSteerNoScrews.stl</uri>
             <scale>0.001 0.001 0.001</scale>
           </mesh>
         </geometry>
@@ -57,7 +57,7 @@
         <pose>-0.145 0 .146 1.57079632679 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarServoBumper.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarServoBumper.stl</uri>
             <scale>0.001 0.001 0.001</scale>
           </mesh>
         </geometry>
@@ -88,7 +88,7 @@
         <pose>0 0 0 0 0 1.57079632679</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/CUPCarCollisionBody.stl</uri>
+            <uri>model://robo_car/meshes/CUPCarCollisionBody.stl</uri>
             <scale>1.0 1.0 1.0</scale>
           </mesh>
         </geometry>
@@ -171,7 +171,7 @@
         <pose>0 0 0 0 0 3.141592653589793238</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/LeftWheel.stl</uri>
+            <uri>model://robo_car/meshes/LeftWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -248,7 +248,7 @@
         <pose>0 0 0 0 0 0</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/RightWheel.stl</uri>
+            <uri>model://robo_car/meshes/RightWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -325,7 +325,7 @@
         <pose>0 0 0 0 0 3.141592653589793238</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/LeftWheel.stl</uri>
+            <uri>model://robo_car/meshes/LeftWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
@@ -401,7 +401,7 @@
         <pose>0 0 0 0 0 0</pose>
         <geometry>
           <mesh>
-            <uri>model://robocon_car/meshes/RightWheel.stl</uri>
+            <uri>model://robo_car/meshes/RightWheel.stl</uri>
           </mesh>
         </geometry>
         <material>
